[package]
name = "minecraft-mod-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
tui = "0.19.0"

